# phonic-ai

./: .gitignore  README.md  docker-compose.yml  multiroot_workspaces.code-workspace
ai/: README.md  pyproject.toml
ai/ai/: log.py  whisper_integration.py
ai/src/: whisper_integration.py
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/src/: app.py  log.py
backend/src/api/: websocket.py
backend/src/models/: transcript.py
backend/src/services/: redis_service.py  whisper_service.py
backend/tests/api/: websocket_test.py
backend/tests/models/: transcript_test.py
backend/tests/services/: redis_service_test.py  whisper_service_test.py
docs/: deployment.md  sequence_diagram.puml
frontend/: Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
frontend/nginx/: default.conf
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx  setupTests.ts
frontend/src/__mocks__/: mermaid.ts
frontend/src/components/: Manager.module.css  Manager.test.tsx  Manager.tsx  Recorder.module.css  Recorder.test.tsx  Recorder.tsx  SequenceDiagram.module.css  SequenceDiagram.test.tsx  SequenceDiagram.tsx  Transcript.module.css  Transcript.test.tsx  Transcript.tsx
frontend/src/services/: websockets.ts
frontend/src/store/: recorderSlice.test.ts  recorderSlice.ts  store.ts
phonic-ai-chart/: Chart.yaml  values.yaml
phonic-ai-chart/templates/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  redis-deployment.yaml
