[project]
name = "phonic-backend"
version = "0.1.0"
description = "FastAPI backend for live video/audio transcription with Whisper AI integration"
authors = [
    { name="Gabriel Munumel", email="gabrielmunumel@gmail.com" }
]
dependencies = [
    "fastapi==0.110.2",
    "uvicorn[standard]==0.29.0",
    "websockets==12.0",
    "pydantic==2.7.1",
    "python-multipart==0.0.9",
    "whisper==1.1.10",
    "numpy==1.26.4",
    "torch==2.3.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"