[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for live audio transcription with Whisper AI integration"
authors = [
    { name="Gabriel Munumel", email="gabrielmunumel@gmail.com" }
]
dependencies = [
    "fastapi==0.110.2",
    "uvicorn[standard]==0.29.0",
    "websockets==12.0",
    "redis==6.2.0",
    "python-multipart==0.0.9"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pylint]
disable = "E0401, C0114, C0116"